debugging/ working on free blocks list